# cherwell_pydantic_api

./: .gitignore  .pre-commit-config.yaml  LICENSE.md  NOTES.md  README.md  poetry.toml  pyproject.toml  requirements.txt
cherwell_api/: api.py  bo.py
cherwell_api/schema/: __init__.py  fields.py
cherwell_pydantic_api/: __main__.py  api.py  cli.py  generated_api_utils.py  instance.py  interactive.py  intercept_transport.py  interfaces.py  settings.py  types.py  utils.py  validators.py
cherwell_pydantic_api/_generated/api/endpoints/: Approval.py  BusinessObject.py  Core.py  Forms.py  Lifecycle.py  OneStepActions.py  Queues.py  Searches.py  Security.py  Service.py  Teams.py  Users.py  __init__.py
cherwell_pydantic_api/_generated/api/models/: __init__.py
cherwell_pydantic_api/_generated/api/models/Trebuchet/: __init__.py
cherwell_pydantic_api/_generated/api/models/Trebuchet/WebApi/: __init__.py
cherwell_pydantic_api/_generated/api/models/Trebuchet/WebApi/DataContracts/: Approval.py  BusinessObject.py  Core.py  Forms.py  Lifecycle.py  OneStepActions.py  Queues.py  Searches.py  Security.py  Teams.py  Users.py  __init__.py
cherwell_pydantic_api/bo/: interfaces.py  model_base.py  registry.py  valid_schema.py  wrapper.py
cherwell_pydantic_api/bo/modelgen/: collector.py  model_generator.py  repo.py
cherwell_pydantic_api/bo/templates/: base.py.j2  dot_gitignore  model.py.j2
cherwell_pydantic_api/cli/: __init__.py  check.py  ipython.py  repo.py  utils.py  welcome.py
cherwell_pydantic_api/examples/: GettingStarted.ipynb
cherwell_pydantic_api/schema/: __init__.py  fields.py
examples/: Example.ipynb
scripts/: codegen.py  ipython.py
scripts/codegen_templates/: Enum.jinja2
scripts/codegen_templates/pydantic/: BaseModel.jinja2
scripts/codegen_templates/pydantic_v2/: BaseModel.jinja2
tests/: test_types.py
