[tool.poetry]
name = "cherwell_pydantic_api"
version = "0.0.5"
description = "A pythonic, asyncio connector for the Cherwell CSM API with full usage of Pydantic 2 types"
authors = ["Anthony Uk <uk@anthonyuk.dev>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/dataway/cherwell_pydantic_api"
homepage = "https://github.com/dataway/cherwell_pydantic_api"

classifiers = [
    'Development Status :: 1 - Planning',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3 :: Only',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: Implementation :: CPython',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'Intended Audience :: Customer Service',
]
keywords = ["cherwell", "pydantic"]


[tool.poetry.dependencies]
python = ">=3.9,<4.0"
pydantic = "^2.1.1"
pydantic-settings = "^2.0.3"
pydantic-changedetect = "^0.5.1"
httpx = "^0.24.0"
async-lru = "^2.0.2"
click = "^8.1.3"
black = { version = "^23.1.0", optional = true }
dulwich = { version = "^0.21.3", optional = true }
jupyter = { version = "^1.0.0", optional = true }
nest-asyncio = { version = "^1.5.6", optional = true }
ipywidgets = { version = "^8.0.5", optional = true }
jupyterlab = { version = "^4.0.0", optional = true }
ipyaggrid = { version = "^0.4.0", optional = true }
jinja2 = { version = "^3.1.2", optional = true }

[tool.poetry.group.dev.dependencies]
ipython = ">=8.11.0"
dulwich = "^0.21.3"
datamodel-code-generator = ">=0.21.4"
black = "^23.1.0"
pdoc = ">=13.0.0"
rich = ">=13.3.2"
pre-commit = "^3.2.2"
autopep8 = ">=2.0.2"
pytest = ">=7.3.0"
mypy = ">=1.2.0"
pytest-httpx = "^0.23.0"
hypothesis = {extras = ["cli"], version = "^6.72.0"}
pytest-asyncio = "^0.21.0"

[tool.poetry.extras]
modelgen = ["black", "dulwich", "click", "jinja2"]
jupyter = ["jupyter", "ipywidgets", "jupyterlab", "ipyaggrid", "nest-asyncio"]
all = ["modelgen", "jupyter"]

[tool.poetry.scripts]
cherwell-pydantic-api-cli = "cherwell_pydantic_api.cli:cli"
cwcli = "cherwell_pydantic_api.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
ignore = ['E303']
max-line-length = 120

[tool.isort]
profile = "hug"
line_length = 120
lines_after_imports = 3

[tool.pyright]
#reportUnknownArgumentType = false
#reportUnknownParameterType = false
#reportMissingParameterType = false
pythonVersion = "3.9"
exclude = ['.venv/', 'tests/']

[tool.mypy]
plugins = "pydantic.mypy"
#ignore_missing_imports = true
exclude = ['tests/']
